objects/Program_Reviews__c.object
<CustomObject>
    <fields>
        <fullName>IsMonitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMonitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>Program_Enrollment__c</referenceTo>
        <relationshipLabel>Program Reviews</relationshipLabel>
        <relationshipName>Program_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Record_Complete_Date__c</fullName>
        <label>Record Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Details__c</fullName>
        <label>Rule Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UniquePE__c</fullName>
        <label>UniquePE</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Program Reviews</label>
    <nameField>
        <label>Program Reviews Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>